--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
 
 			<p id="mark">This is test inline tags: <i>italic</i> <sup>up</sup><ins>insert line</ins> </p>
 
+			<ol>
+				<li>Block Level Element	</li>
+				<ul>
+					<li> ol </li>
+					<li>li</li>
+					<li>p</li>
+				</ul>
+				<li>Inline Elements</li>
+				<ul>
+					<li>img</li>
+					<li>br</li>
+					<li>strong</li>
+				</ul>
+				
+			</ol>
+			<a href="https://www.usca.edu">Go to USCA</a>
+			<img src="img/google.png" alt="Google ">
+			<a href="https://www.google.com"> <img src="img/google.png" alt=""></a>
+
+			<a href="/doc/imageMap.html">Link to image map</a>
 		</div>
 
 
