--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<img src="img/google.png" alt="Google ">
 			<a href="https://www.google.com"> <img src="img/google.png" alt=""></a>
 
-			<a href="/doc/imageMap.html">Link to image map</a>
+			<a href="./doc/imageMap.html">Link to image map</a>
 		</div>
 
 
