--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 	<div id="side"> </div>
 	<div class="practicearea">
 		<div class="practice">
-			<h2>August 29 practice</h2>
+			<h2>29 August Practice</h2>
 
 			<p id="mark">This is test inline tags: <i>italic</i> <sup>up</sup><ins>insert line</ins> </p>
 
 			<ol>
-				<li>Block Level Element	</li>
+				<li>Block Level Element </li>
 				<ul>
 					<li> ol </li>
 					<li>li</li>
@@ -37,7 +37,7 @@
 					<li>br</li>
 					<li>strong</li>
 				</ul>
-				
+
 			</ol>
 			<a href="https://www.usca.edu">Go to USCA</a>
 			<img src="img/google.png" alt="Google ">
@@ -48,6 +48,74 @@
 
 
 		<div class="practice">
+			<h2>31 August Practice.</h2>
+			<p>special symbol: &copy; This is a copyright.</p>
+			<p>This is the &lt; img &gt;</p>
+			<p>Start a Table</p>
+			<table border="1">
+				<tr>
+					<td>1</td>
+					<td>2</td>
+					<td>3</td>
+				</tr>
+				<tr>
+					<td>1</td>
+					<td>2</td>
+					<td>3</td>
+				</tr>
+				<tr>
+					<td colspan="2">4</td>
+					<td>6</td>
+				</tr>
+				<tr>
+					<td>4</td>
+					<td>5</td>
+					<td>6</td>
+				</tr>
+				<tr>
+					<td rowspan="2">4</td>
+					<td>5</td>
+					<td>6</td>
+				</tr>
+				<tr>
+					<td>5</td>
+					<td>6</td>
+				</tr>
+			</table>
+			<table border="1">
+				<tr>
+					<td colspan="4">Temperature Distribution in Jan-Apr 2015</td>
+				</tr>
+				<tr>
+					<td>Month</td>
+					<td>High</td>
+					<td>Low</td>
+					<td>Average</td>
+				</tr>
+				<tr>
+					<td>Jan.</td>
+					<td>48</td>
+					<td>36</td>
+					<td>40</td>
+				</tr>
+				<tr>
+					<td>Feb.</td>
+					<td>49</td>
+					<td>37</td>
+					<td rowspan="2">43</td>
+				</tr>
+				<tr>
+					<td>Mar.</td>
+					<td>52</td>
+					<td>39</td>
+				</tr>
+				<tr>
+					<td>Apr.</td>
+					<td>58</td>
+					<td>43</td>
+					<td>47</td>
+				</tr>
+			</table>
 
 		</div>
 
