--- a/index.html
+++ b/index.html
@@ -284,17 +284,36 @@
 			</select>
 			<p><input type="submit"></p>
 			<p><br>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/_MMga99JDxI" 
-			title="YouTube video player" frameborder="0" allow="accelerometer; 
-			autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-			allowfullscreen></iframe>
-</p>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/_MMga99JDxI"
+					title="YouTube video player" frameborder="0" allow="accelerometer; 
+			autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</p>
 
 
 		</div>
 
 		<div class="practice">
 
+			<h1>14 September</h1>
+
+			<!-- <iframe src can be local/remote-->
+
+			<!--<iframe width="600“ height=" 450" frameborder="0" style="border:0"
+				src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDxP_piMOZoX9xRNJxRBioVZKfQ--izWrc&q=University+of+South+Carolina+Aiken,Aiken+SC">
+			</iframe>
+
+			<iframe width="420" height="315" src="//www.youtube.com/embed/EYeKqgy3CzI" frameborder="0" allowfullscreen>
+			</iframe>
+
+			<iframe width="420" height="315" src="video/puppy.mp4" frameborder="0">
+			</iframe> -->
+
+			<!-- meta tag : <meta charset="UTF-8"> -->
+
+			<video src="video/puppy.mp4" poster="img/puppy.jpg" 
+			width="420" height="315" preload="auto" controls loop>
+		<p>A video of a puppy</p></video>
+		
 
 		</div>
 
